# robot-training

./: README.md  codefromgipiti
day1/: 01_Intro-to-test-automation.md  02_Installation.md  03_Test-Structure-and-Maintainability.md  04_Intro-to-Browser-Automation.md  05_Debugging-and-Repporting.md
day2/: 01_Variables-and-Data-Structures.md  02_Custom-Keywords.md  03_Test-Case-Styles-and-Templates.md  04_Assertions-and-Validations.md  05_Project-Structure-and-Design-Patterns.md
day3/: 01_Exercises.md
robotframework-playground/: main.py  pyproject.toml
robotframework-playground/day1/tests/: 02_first-browser-test.robot  03_keyword-browser-test.robot
robotframework-playground/results/: log.html  output.xml  playwright-log.txt  report.html
robotframework-playground/tests/day1/: 01_first-test.robot  02_first-browser-test.robot  03_keyword-browser-test.robot  04_browser-interaction-test.robot  05_debug-reporting-test.robot
robotframework-playground/tests/day2/: 01_variables-data-structures-test.robot  02_custom-user-keywords.robot  03_01_ddt-template-test.robot  03_02_ddt-template-test.robot  03_03_bdd-template-test.robot  04_assertions-and-validations.robot
robotframework-playground/tests/day2/lib/: custom-assertion.py
robotframework-playground/tests/day2/variables/: json-file.json  yaml-file.yml
robotframework-playground/tests/day3/: 01_iframe-test.robot  02_shadow-dom-test.robot  03_api-test.robot
