[project]
name = "robotframework-playground"
version = "0.1.0"
description = "A playground for Robot Framework"
authors = [{ name = "Goncalo Moura", email = "goncalo.moura@solteq.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "robotframework>=7.2.2",
    "robotframework-browser>=19.3.1",
]

[dependency-groups]
dev = [
    "robotframework-tidy>=4.16.0",
    "ruff>=0.9.10",
]
